# cauldron

./: .gitignore  ARCHITECTURE.md  Cargo.toml  Makefile  README.md  THIRD_PARTY_LICENSES
.github/workflows/: ci.yml  nightly.yml  wine-build.yml
CauldronApp/: Package.swift
CauldronApp/Sources/CauldronApp/: BuildChannel.swift  CauldronApp.swift
CauldronApp/Sources/CauldronApp/Bridge/: CauldronBridge.swift  CauldronFFI.swift
CauldronApp/Sources/CauldronApp/Licensing/: ActivationView.swift  JWTValidator.swift  KeychainHelper.swift  LicenseManager.swift  LicenseStatus.swift  MachineIdentifier.swift
CauldronApp/Sources/CauldronApp/Models/: AppSettings.swift  Bottle.swift  ConfigProfile.swift  DiscoveredBottle.swift  GameRecord.swift  GraphicsBackend.swift  PatchAnalysis.swift  PerGameSettings.swift  ProtonCommitEntry.swift  SyncStatus.swift  WineVersion.swift
CauldronApp/Sources/CauldronApp/ViewModels/: BottleListViewModel.swift
CauldronApp/Sources/CauldronApp/Views/: BottleDetailView.swift  (+11 more)
cauldron-bridge/: Cargo.toml  build.rs  cbindgen.toml
cauldron-bridge/include/: cauldron.h
cauldron-bridge/src/: lib.rs
cauldron-cli/: Cargo.toml
cauldron-cli/src/: completions.rs  main.rs
cauldron-core/: Cargo.toml
cauldron-core/src/: bottle.rs  bottle_archive.rs  bottle_discovery.rs  compat_reporter.rs  dependency_installer.rs  dependency_tracker.rs  env_config.rs  game_patches.rs  game_scanner.rs  graphics.rs  icon_processor.rs  kosmickrisp.rs  launch_config_resolver.rs  lib.rs  log_capture.rs  logging.rs  performance.rs  registry.rs  rosettax87.rs  runtime.rs  runtime_downloader.rs  shader_cache.rs  steam_installer.rs  updater.rs  wine.rs  wine_builder.rs  wine_downloader.rs  wine_source.rs
cauldron-core/tests/: integration_bottle_lifecycle.rs  integration_game_database.rs
cauldron-db/: Cargo.toml
cauldron-db/src/: lib.rs  models.rs  queries.rs  schema.rs  sync_status.rs
cauldron-sync/: Cargo.toml
cauldron-sync/src/: adapter.rs  applicator.rs  auto_adapter.rs  classifier.rs  config_importer.rs  lib.rs  monitor.rs  patch_analysis.rs  pipeline.rs  protonfixes.rs
db/: seed.sql
db/migrations/: 001_initial.sql  002_game_settings_and_patches.sql
db/patches/: mr10058.patch  mr10463.patch  mr10523.patch  mr7256.patch  mr9090.patch  mr9579.patch  mr9759.patch  mr9857.patch  mr9909.patch
docs/: CROSSOVER_D3DMETAL_ARCHITECTURE.md  GFXT_ADAPTER_SPEC.md
patches/: 0002-msync-mach-semaphore-sync-for-macos.patch.wip  FLICKER_FIX_SPEC.md  PATCH_AUDIT.md  README.md
patches/cauldron/: 0001-ntdll-Preserve-private-pages-on-VirtualProtect.patch  0003-winemac-drv-reduce-compositor-flicker.patch  0004-ntdll-prefer-native-dlls-from-app-directory.patch
patches/rosetta/: 1001-kernelbase-CW-HACK-19610.diff
scripts/: apply_flicker_fix.py  apply_safe_cow_patch.py  audit_all_11.6.sh  build_dmg.sh  build_kosmickrisp.sh  build_patch_series.sh  build_wine.sh  check_proton_commits.py  init_wine_fork.sh  install_deps.sh  parse_proton_config.py  sign_wine.sh  test_all_patches.sh  test_e2e.py
tests/flicker/: README.md  analyze_frames.py  build_variants.sh  record_session.sh  run_all.sh  swap_variant.sh
(+1 files in other folders)
