[workspace]
members = [
    "cauldron-core",
    "cauldron-sync",
    "cauldron-db",
    "cauldron-bridge",
    "cauldron-cli",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
