[package]
name = "cauldron-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
tracing-appender = "0.2"
cauldron-db = { path = "../cauldron-db" }
uuid = { version = "1", features = ["v4"] }
dirs = "5"
sha2 = "0.10"
toml = "0.8"
reqwest = { version = "0.12", features = ["stream", "rustls-tls"], default-features = false }
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = "0.4"
tempfile = "3"
git2 = "0.19"

[dev-dependencies]
tempfile = "3"
