[package]
name = "cauldron-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
git2 = "0.19"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
cauldron-db = { path = "../cauldron-db" }
regex = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
tempfile = "3"

[dev-dependencies]
tempfile = "3.27.0"
